feature/login branch + initial commit

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
     {{if .user}}
       <a href="/timeline">my timeline</a> |
       <a href="/timeline">public timeline</a> |
-      <a href="/logout">sign out [{{ .user.username }}]</a>
+      <a href="/logout">sign out [{{ .user }}]</a>
     {{else}}
       <a href="/">public timeline</a> |
       <a href="/register">sign up</a> |
