--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 <title>Sign up | MiniTwit</title>
 <h2>Sign Up</h2>
 {{if .content}}<div class=error><strong>Error:</strong> {{.content}}</div>{{end}}
-<form action="/login" method=post>
+<form action="/register" method=post>
   <dl>
     <dt>Username:
     <dd><input type=text name=username size=30 required>
