--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,11 +1,11 @@
 {{define "navbar.html"}}
 <div class=navigation>
     {{if .user}}
-      <a href="/timeline">my timeline</a> |
-      <a href="/timeline">public timeline</a> |
-      <a href="/logout">sign out [{{ .user }}]</a>
+      <a href="/">my timeline</a> |
+      <a href="/public">public timeline</a> |
+      <a href="/logout">sign out [{{ .user.Username }}]</a>
     {{else}}
-      <a href="/">public timeline</a> |
+      <a href="/public">public timeline</a> |
       <a href="/register">sign up</a> |
       <a href="/login">sign in</a>
     {{end}}
