--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -17,7 +17,7 @@
   {{else}}
     <div class=twitbox>
       <h3>What's on your mind {{ .user.Username }}?</h3>
-      <form action="/add_message" method=post>
+      <form action="/private/add_message" method=post>
         <p><input type=text name=text size=60>
           <input type=submit value="Share">
       </form>
