--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 {{define "footer.html"}}
 <div class=footer>
-    MiniTwit &mdash; A Flask Application
+    MiniTwit &mdash; A Gin-gonic Application
 </div>
 </div>
 {{end}}
